# vdetelweb

./: CMakeLists.txt  Makefile.am  README.md  config.h.in  configure.ac  telnet.c  vdetelweb.c  web.c
